--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 					<ul>
 						<li><a href="#home">Capa</a></li>
 						<li><a href="#introduction">Sinopse</a></li>
-						<li><a href="characters">Personagens</a></li>
+						<li><a href="#characters">Personagens</a></li>
 						<li><a href="#resume">Resumo</a></li>
 						<li><a href="#review">Análise</a></li>
-						<li><a href="#end">Rodapé</a></li>
+						<li><a href="#end">The End</a></li>
 					</ul>
 				</nav> <!-- <img src="img/divertida_mente-titulo.png" alt=""> --> <img src="img/divertidamente-claro.png" alt="">
 			</div>
